--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </dic>
 </section>
 
-
     <!-- End Header -->
     <!-- Hero Section -->
     <section id="hero">
@@ -50,36 +49,31 @@
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Serv<span>i</span>ces</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem officiis sequi asperiores,
-                    consequatur distinctio dolorum possimus dignissimos rerum inventore ad!</p>
+                <p>A polymath, of-course it's okay to call me so. I provide services in three industries: Technology (Computer Science), Entertainment (Music) and Finance (Accounting)</p>
             </div>
             <div class="service-bottom">
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, est fuga. Temporibus minima
-                        quibusdam optio voluptatibus nemo voluptatum nostrum dignissimos porro quidem! Unde, quae eum.
+                    <h2>Teacher</h2>
+                    <p>I teach computer, English and Music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book in Music(Piano made simple).
                     </p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, est fuga. Temporibus minima
-                        quibusdam optio voluptatibus nemo voluptatum nostrum dignissimos porro quidem! Unde, quae eum.
+                    <h2>Graphic Designer</h2>
+                    <p>I design indoor and outdoor graphics with <b>BEAUTIFUL</b> visualizations that can be published on printed media such as brochures or electronics media such as social networks apps and also can be included in video adverts.
                     </p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, est fuga. Temporibus minima
-                        quibusdam optio voluptatibus nemo voluptatum nostrum dignissimos porro quidem! Unde, quae eum.
+                    <h2>Web Designer</h2>
+                    <p>Yes, a web like this and so much MORE. I design websites aimed at personal targets as this one is for me, organizational targets with hospitals as an instance and also for companies.
                     </p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, est fuga. Temporibus minima
-                        quibusdam optio voluptatibus nemo voluptatum nostrum dignissimos porro quidem! Unde, quae eum.
+                    <h2>Accounting consultant</h2>
+                    <p>I am a treasurer at our local church. I also help organizations and companies in keeping records also with preparing and interpreting financial reports. I do it for individual clients too.
                     </p>
                 </div>
             </div>
@@ -96,12 +90,9 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 1</h1>
-                        <h2>Coding is love</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit pariatur earum ad
-                            doloremque, iure obcaecati, soluta perspiciatis eum enim maxime veritatis ea quaerat commodi
-                            ipsam necessitatibus eius totam minima expedita magnam? Expedita quos sunt cumque eligendi
-                            cum velit aperiam, veniam soluta asperiores accusantium ad molestias nam architecto placeat
-                            beatae omnis!
+                        <h2>A hospital MS</h2>
+                        <p>
+                            Currently in progress. I am making a hospital software management system. The software is full equipped with all the management features that a hospital needs in terms of therapeutic coordination systems, administration affairs and financial systems as well. There is so much more to wait for when this project is being completed. It's my hope that you will like it!
                         </p>
                     </div>
                     <div class="project-img">
@@ -110,13 +101,9 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
-                        <h2>Coding is love</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit pariatur earum ad
-                            doloremque, iure obcaecati, soluta perspiciatis eum enim maxime veritatis ea quaerat commodi
-                            ipsam necessitatibus eius totam minima expedita magnam? Expedita quos sunt cumque eligendi
-                            cum velit aperiam, veniam soluta asperiores accusantium ad molestias nam architecto placeat
-                            beatae omnis!
+                        <h1>Project 2</h1>
+                        <h2>A Door Alarm</h2>
+                        <p>I made an electronic door alarm. A good thing about it is that it does not only sense when the door is opened but it also senses when someone passes through the door when the door is open. I am working to give it a best performance which include sensing someone who comes so slowly when the door is open (which can't be recognized by my current circuit design. I am processing the images on this project.
                         </p>
                     </div>
                     <div class="project-img">
@@ -125,13 +112,9 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
-                        <h2>Coding is love</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit pariatur earum ad
-                            doloremque, iure obcaecati, soluta perspiciatis eum enim maxime veritatis ea quaerat commodi
-                            ipsam necessitatibus eius totam minima expedita magnam? Expedita quos sunt cumque eligendi
-                            cum velit aperiam, veniam soluta asperiores accusantium ad molestias nam architecto placeat
-                            beatae omnis!
+                        <h1>Project 3</h1>
+                        <h2>A calculator</h2>
+                        <p>I made two of them actually. One of them is a normal calculator. Another is a student-based calculator which can calculate the various student's grading based on inputs it has received such as assignment, quiz, test and final examination results. The made the software based on the visual basic 6 programming language. There is a lot more software projects that I've made as well.
                         </p>
                     </div>
                     <div class="project-img">
@@ -140,13 +123,10 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
-                        <h2>Coding is love</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit pariatur earum ad
-                            doloremque, iure obcaecati, soluta perspiciatis eum enim maxime veritatis ea quaerat commodi
-                            ipsam necessitatibus eius totam minima expedita magnam? Expedita quos sunt cumque eligendi
-                            cum velit aperiam, veniam soluta asperiores accusantium ad molestias nam architecto placeat
-                            beatae omnis!
+                        <h1>Project 4</h1>
+                        <h2>Piano Nocturnes</h2>
+                        <p>
+                            I have made a set of musical nocturnes. Some fit to be a musical background for inspirational talks, some fit for movies, some fit for advertisement purposes. I think it's a blessing to me that it has happened they have a lot of funs out there. I am working on their privacy policy before I can put their link here for you to see listen and download them if you want. KEEP COMING HERE.
                         </p>
                     </div>
                     <div class="project-img">
@@ -155,13 +135,10 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
-                        <h2>Coding is love</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit pariatur earum ad
-                            doloremque, iure obcaecati, soluta perspiciatis eum enim maxime veritatis ea quaerat commodi
-                            ipsam necessitatibus eius totam minima expedita magnam? Expedita quos sunt cumque eligendi
-                            cum velit aperiam, veniam soluta asperiores accusantium ad molestias nam architecto placeat
-                            beatae omnis!
+                        <h1>Project 6</h1>
+                        <h2>Transposition Accounting</h2>
+                        <p>
+                            The ultimate part I like in accounting. I figured out the most affordable and quicker cargo transposition method based on the probability of purchase order items lead time period in RELATION to various factors affecting transportation at a given area. The project is still in progress in terms of linking it to the current system of our (TZ) transportation systems. You will see it here when it is done.
                         </p>
                     </div>
                     <div class="project-img">
@@ -182,8 +159,9 @@
         </div>
         <div class="col-right">
             <h1 class="section-title">About <span>me</span></h1>
-            <h2>Front End Development</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus ad sapiente quasi inventore aut deleniti consequatur similique temporibus aliquam a dolorem exercitationem voluptatem voluptate dolores reiciendis necessitatibus sequi ipsa explicabo neque illum laudantium, placeat corrupti dicta optio! Tempora sint saepe ex accusamus tempore delectus illum, rerum quaerat et id voluptatem.</p>
+            <h2>Computer Scientist</h2>
+            <p>As a title to me, a computer scientist specialized on financial management systems describes me easily. Computer science (CS) related projects are mostly what I am used to and it is what I shortly like to relate my skills on when expressing what I am capable of doing. Though, if required in person, I can talk about my exceptional accounting math techniques. My life history is bult in music, it is more like a culture rather than a career to me!.
+            </p>            
             <a href="Documents/jeremiah-cv.pdf" class="cta" download>Download Resume</a>
         </div>
     </div>
@@ -228,7 +206,7 @@
     <section id="footer">
         <div class="footer container">
             <div class="brand"><h1><span>J</span>eremiah <span>J</span>oseph</h1></div>
-            <h2>Your Complete Web Solution</h2>
+            <h2>Your Software Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
                     <a href="#"><img src="https://img.icons8.com/wired/64/000000/facebook-new.png"/></a>
@@ -254,3 +232,4 @@
 </body>
 
 </html>
+
