--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
                     <h2>Teacher</h2>
-                    <p>I teach computer, English and Music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book in Music(Piano made simple).
+                    <p>I teach computer, English and Music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book on Music(Piano made simple).
                     </p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
                     <h2>Graphic Designer</h2>
-                    <p>I design indoor and outdoor graphics with <b>BEAUTIFUL</b> visualizations that can be published on printed media such as brochures or electronics media such as social networks apps and also can be included in video adverts.
+                    <p>I design indoor and outdoor graphics with <b>BEAUTIFUL</b> visualizations that can be published on printed media such as brochures or electronic media such as social networks apps and also can be included in video adverts.
                     </p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
                     <h2>Web Designer</h2>
-                    <p>Yes, a web like this and so much MORE. I design websites aimed at personal targets as this one is for me, organizational targets with hospitals as an instance and also for companies.
+                    <p>Yes, a web like this and so much MORE. I design websites aimed at personal targets as this one is for me, organizational targets with hospital M.S as an instance and also for companies.
                     </p>
                 </div>
                 <div class="service-item">
@@ -84,7 +84,7 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Recent <span>Projects</span></h1>
+                <h1 class="section-title" style="margin-left: 5px">Recent <span>Projects</span></h1>
             </div>
             <div class="all-projects">
                 <div class="project-item">
@@ -92,7 +92,7 @@
                         <h1>Project 1</h1>
                         <h2>A hospital MS</h2>
                         <p>
-                            Currently in progress. I am making a hospital software management system. The software is full equipped with all the management features that a hospital needs in terms of therapeutic coordination systems, administration affairs and financial systems as well. There is so much more to wait for when this project is being completed. It's my hope that you will like it!
+                            Currently in progress. I am making a hospital software management system. The software is full equipped with all the management features that a hospital needs in terms of therapeutic coordination systems, administration affairs and financial policies as well. There is so much more to wait for when this project is being completed. It's my hope that you will like it!
                         </p>
                     </div>
                     <div class="project-img">
@@ -103,7 +103,7 @@
                     <div class="project-info">
                         <h1>Project 2</h1>
                         <h2>A Door Alarm</h2>
-                        <p>I made an electronic door alarm. A good thing about it is that it does not only sense when the door is opened but it also senses when someone passes through the door when the door is open. I am working to give it a best performance which include sensing someone who comes so slowly when the door is open (which can't be recognized by my current circuit design. I am processing the images on this project.
+                        <p>I made an electronic door alarm. A good thing about it is that it does not only sense when the door is opened but it also senses when someone passes through the door when the door is open. I am working to give it a best performance which include sensing someone who comes so slowly when the door is open (which can't be recognized by my current circuit design). I am processing the images on this project.
                         </p>
                     </div>
                     <div class="project-img">
@@ -114,7 +114,7 @@
                     <div class="project-info">
                         <h1>Project 3</h1>
                         <h2>A calculator</h2>
-                        <p>I made two of them actually. One of them is a normal calculator. Another is a student-based calculator which can calculate the various student's grading based on inputs it has received such as assignment, quiz, test and final examination results. The made the software based on the visual basic 6 programming language. There is a lot more software projects that I've made as well.
+                        <p>I made two of them actually. One of them is a normal calculator. Another is a student-based calculator which can calculate the various student's grading based on inputs it has received such as assignment, quiz, test and final examination scores. I made the software based on the visual basic 6 programming language. There is a lot more software projects that I've done as well.
                         </p>
                     </div>
                     <div class="project-img">
@@ -126,7 +126,7 @@
                         <h1>Project 4</h1>
                         <h2>Piano Nocturnes</h2>
                         <p>
-                            I have made a set of musical nocturnes. Some fit to be a musical background for inspirational talks, some fit for movies, some fit for advertisement purposes. I think it's a blessing to me that it has happened they have a lot of funs out there. I am working on their privacy policy before I can put their link here for you to see listen and download them if you want. KEEP COMING HERE.
+                            I have made a set of musical nocturnes. Some fit to be a musical background for inspirational talks, some fit for movies and some fit for advertisement purposes. I think it's a blessing to me that it has happened they have a lot of funs out there. I am working on their privacy policy before I can put their link here for you to see listen and download them if you want. KEEP COMING HERE.
                         </p>
                     </div>
                     <div class="project-img">
