--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="kaka jere">
     <link rel="stylesheet" href="style.css">
-    <title>My Website</title>
+    <link rel="stylesheet" href="fontawasome5/css/all.css">
+    <title>Kaka Jere</title>
 </head>
 
 <body>
@@ -53,25 +55,25 @@
             </div>
             <div class="service-bottom">
                 <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
+                    <div class="icon"><i class="fa fa-chalkboard-teacher"></i></div>
                     <h2>Teacher</h2>
                     <p>I teach computer, English and Music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book on Music(Piano made simple).
                     </p>
                 </div>
                 <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
+                    <div class="icon"> <i class="fa fa-dice-d20"></i> </div>
                     <h2>Graphic Designer</h2>
                     <p>I design indoor and outdoor graphics with <b>BEAUTIFUL</b> visualizations that can be published on printed media such as brochures or electronic media such as social networks apps and also can be included in video adverts.
                     </p>
                 </div>
                 <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
+                    <div class="icon"> <i class="fa fa-globe"></i> </div>
                     <h2>Web Designer</h2>
                     <p>Yes, a web like this and so much MORE. I design websites aimed at personal targets as this one is for me, organizational targets with hospital M.S as an instance and also for companies.
                     </p>
                 </div>
                 <div class="service-item">
-                    <div class="icon"><img src="https://img.icons8.com/cute-clipart/64/000000/home-office.png" /></div>
+                    <div class="icon"> <i class="fa fa-money-bill-wave-alt"></i> </div>
                     <h2>Accounting consultant</h2>
                     <p>I am a treasurer at our local church. I also help organizations and companies in keeping records also with preparing and interpreting financial reports. I do it for individual clients too.
                     </p>
@@ -96,7 +98,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/pic2.JPG" alt="img">
+                        <img src="images/hospitalMS.jpeg" alt="hospital MS">
                     </div>
                 </div>
                 <div class="project-item">
@@ -107,7 +109,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/pic2.JPG" alt="img">
+                        <img src="images/doorAlarm.png" alt="door alarm">
                     </div>
                 </div>
                 <div class="project-item">
@@ -118,7 +120,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/pic2.JPG" alt="img">
+                        <img src="images/calculator.png" alt="calculator">
                     </div>
                 </div>
                 <div class="project-item">
@@ -130,19 +132,19 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/pic2.JPG" alt="img">
+                        <img src="images/piano.jpg" alt="piano">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 6</h1>
+                        <h1>Project 5</h1>
                         <h2>Transposition Accounting</h2>
                         <p>
                             The ultimate part I like in accounting. I figured out the most affordable and quicker cargo transposition method based on the probability of purchase order items lead time period in RELATION to various factors affecting transportation at a given area. The project is still in progress in terms of linking it to the current system of our (TZ) transportation systems. You will see it here when it is done.
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/pic2.JPG" alt="img">
+                        <img src="images/accounting.jpg" alt="accounting">
                     </div>
                 </div>
             </div>
@@ -154,7 +156,7 @@
     <div class="about container">
         <div class="col-left">
             <div class="about-img">
-                <img src="images/pic2.JPG" alt="aboutmeimg">
+                <img src="images/pic2.JPG" alt="Jeremiah Joseph">
             </div>
         </div>
         <div class="col-right">
@@ -174,7 +176,7 @@
         <div><h1 class="section-title">Contact <span>Info</span></h1></div>
         <div class="contact-items">
             <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/50/000000/call-male.png" alt="callIcon"></div>
+                <div class="icon"> <i class="fas fa-mobile"></i> </div>
                 <div class="contact-info">
                     <h1>Phone</h1>
                     <h2>+255 (0) 757 835 930</h2>
@@ -182,7 +184,7 @@
                 </div>
             </div>
             <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/bubbles/50/000000/new-post.png"/></div>
+                <div class="icon"> <i id="mailE" class="fa fa-envelope-open"></i> </div>
                 <div class="contact-info">
                     <h1>Email</h1>
                     <h2>jictoejeremiah@gmail.com</h2>
@@ -190,7 +192,7 @@
                 </div>
             </div>
             <div class="contact-item">
-                <div class="icon"><img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-address-gdpr-icons-flaticons-lineal-color-flat-icons.png"/></div>
+                <div class="icon"> <i class="fa fa-location-arrow"></i> </div>
                 <div class="contact-info">
                     <h1>Address</h1>
                     <h2>Arusha, Tanzania</h2>
@@ -209,26 +211,24 @@
             <h2>Your Software Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/wired/64/000000/facebook-new.png"/></a>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100008888056910" > <i id="faIcon1" class="fab fa-facebook"></i> </a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/wired/64/000000/instagram-new--v1.png"/></a>
+                    <a target="_blank" href="https://www.instagram.com/josephjeremiah54" > <i id="faIcon2" class="fab fa-instagram"></i> </a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/ios-filled/50/000000/twitter.png"/></a>
+                    <a target="_blank" href="https://mobile.twitter.com/JictoeJ" ><i id="faIcon3" class="fab fa-twitter"></i> </a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/ios/50/000000/behance.png"/></a>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=255713446429&text=Hello kakajere, I've liked your service titled"> <i id="faIcon4" class="fab fa-whatsapp"></i> </a>
                 </div>
-                <!-- <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-address-gdpr-icons-flaticons-lineal-color-flat-icons.png"/></a>
-                </div> -->
             </div>
             <p>Copyright (c) 2022. All rights reserved</p>
         </div>
     </section>
     <!-- End Footer Section -->
     <script src="./app.js"></script>
+    <script src="fontawasome5/js/all.js"></script>
 </body>
 
 </html>
