--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="kaka jere">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawasome5/css/all.css">
+    <link rel="shortcut icon" href="images/icon2.png">
     <title>Kaka Jere</title>
 </head>
 
