--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="kakajere">
     <meta name="description" content="kaka jere">
+    <meta name="description" content="pp jere">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawasome5/css/all.css">
     <link rel="shortcut icon" href="images/icon2.png">
@@ -181,16 +182,16 @@
                 <div class="icon"> <i class="fas fa-mobile"></i> </div>
                 <div class="contact-info">
                     <h1>Phone</h1>
-                    <h2>+255 (0) 757 835 930</h2>
-                    <h2>+255 (0) 626 499 708</h2>
+                    <h2><a href="tel:+255(0)757835930">+255 (0) 757 835 930</a></h2>
+                    <h2><a href="tel:+255(0)626499708">+255 (0) 626 499 708</a></h2>
                 </div>
             </div>
             <div class="contact-item">
                 <div class="icon"> <i id="mailE" class="fa fa-envelope-open"></i> </div>
                 <div class="contact-info">
                     <h1>Email</h1>
-                    <h2>jictoejeremiah@gmail.com</h2>
-                    <h2>josephjeremiah458@gmail.com</h2>
+                    <h2><a href="mailto:jictoejeremiah@gmail.com">jictoejeremiah@gmail.com</a></h2>
+                    <h2><a href="mailto:josephjeremiah458@gmail.com">josephjeremiah458@gmail.com</a></h2>
                 </div>
             </div>
             <div class="contact-item">
