--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 <div class="icon"> <i class="fas fa-mobile"></i> </div>
                 <div class="contact-info">
                     <h1>Phone</h1>
-                    <h2><a href="tel:+255(0)757835930">+255 (0) 757 835 930</a></h2>
-                    <h2><a href="tel:+255(0)626499708">+255 (0) 626 499 708</a></h2>
+                    <h2><a href="tel:+255757835930">+255 (0) 757 835 930</a></h2>
+                    <h2><a href="tel:+255626499708">+255 (0) 626 499 708</a></h2>
                 </div>
             </div>
             <div class="contact-item">
