--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jeremiah Joseph(famously known as kaka jere) I'm A polymath, of-course it's okay to call me so. I provide services in three industries: Technology (Computer Science), Entertainment (Music) and Finance (Accounting)...">
-    <meta name="keywords" content="kakajere, kaka jere, pp jere, graphic designer, web developer, software, computer hardware, software developer, teacher, accounting consultant">
-    <meta name="author" content="Jeremiah Joseph">
+    <meta name="description" content="kakajere">
+    <meta name="description" content="kaka jere">
+    <meta name="description" content="pp jere">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawasome5/css/all.css">
     <link rel="shortcut icon" href="images/icon2.png">
@@ -40,9 +40,9 @@
     <section id="hero">
         <div class="hero container">
             <div>
-                <h6>Hello,<span></span></h6>
-                <h6>my name is<span></span></h6>
-                <h6>Jeremiah<span></span></h6>
+                <h1>Hello,<span></span></h1>
+                <h1>my name is<span></span></h1>
+                <h1>Jeremiah<span></span></h1>
                 <a href="#projects" type="button" class="cta">Portfolio</a>
                 <!-- <a href="#" type="button" class="cta">Portfolio</a> -->
             </div>
@@ -53,7 +53,7 @@
     <section id="services">
         <div class="services container">
             <div class="service-top">
-                <h6 class="section-title">Serv<span>i</span>ces</h6>
+                <h1 class="section-title">Serv<span>i</span>ces</h1>
                 <p>A polymath, of-course it's okay to call me so. I provide services in three industries: Technology (Computer Science), Entertainment (Music) and Finance (Accounting)</p>
             </div>
             <div class="service-bottom">
@@ -89,24 +89,24 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h6 class="section-title" style="margin-left: 5px">Recent <span>Projects</span></h6>
+                <h1 class="section-title" style="margin-left: 5px">Recent <span>Projects</span></h1>
             </div>
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <h6>Project 1</h6>
+                        <h1>Project 1</h1>
                         <h2>A hospital MS</h2>
                         <p>
                             Currently in progress. I am making a hospital software management system. The software is full equipped with all the management features that a hospital needs in terms of therapeutic coordination systems, administration affairs and financial policies as well. There is so much more to wait for when this project is being completed. It's my hope that you will like it!
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/hospitalMS.jpg" alt="hospital MS">
+                        <img src="images/hospitalMS.jpeg" alt="hospital MS">
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h6>Project 2</h6>
+                        <h1>Project 2</h1>
                         <h2>A Door Alarm</h2>
                         <p>I made an electronic door alarm. A good thing about it is that it does not only sense when the door is opened but it also senses when someone passes through the door when the door is open. I am working to give it a best performance which include sensing someone who comes so slowly when the door is open (which can't be recognized by my current circuit design). I am processing the images on this project.
                         </p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h6>Project 3</h6>
+                        <h1>Project 3</h1>
                         <h2>A calculator</h2>
                         <p>I made two of them actually. One of them is a normal calculator. Another is a student-based calculator which can calculate the various student's grading based on inputs it has received such as assignment, quiz, test and final examination scores. I made the software based on the visual basic 6 programming language. There is a lot more software projects that I've done as well.
                         </p>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h6>Project 4</h6>
+                        <h1>Project 4</h1>
                         <h2>Piano Nocturnes</h2>
                         <p>
                             I have made a set of musical nocturnes. Some fit to be a musical background for inspirational talks, some fit for movies and some fit for advertisement purposes. I think it's a blessing to me that it has happened they have a lot of funs out there. I am working on their privacy policy before I can put their link here for you to see listen and download them if you want. KEEP COMING HERE.
@@ -140,7 +140,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h6>Project 5</h6>
+                        <h1>Project 5</h1>
                         <h2>Transposition Accounting</h2>
                         <p>
                             The ultimate part I like in accounting. I figured out the most affordable and quicker cargo transposition method based on the probability of purchase order items lead time period in RELATION to various factors affecting transportation at a given area. The project is still in progress in terms of linking it to the current system of our (TZ) transportation systems. You will see it here when it is done.
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="col-right">
-            <h6 class="section-title">About <span>me</span></h6>
+            <h1 class="section-title">About <span>me</span></h1>
             <h2>Computer Scientist</h2>
             <p>As a title to me, a computer scientist specialized on financial management systems describes me easily. Computer science (CS) related projects are mostly what I am used to and it is what I shortly like to relate my skills on when expressing what I am capable of doing. Though, if required in person, I can talk about my exceptional accounting math techniques. My life history is bult in music, it is more like a culture rather than a career to me!.
             </p>            
@@ -176,12 +176,12 @@
     <!-- Contact Section -->
 <section id="contact">
     <div class="contact container">
-        <div><h6 class="section-title">Contact <span>Info</span></h6></div>
+        <div><h1 class="section-title">Contact <span>Info</span></h1></div>
         <div class="contact-items">
             <div class="contact-item">
                 <div class="icon"> <i class="fas fa-mobile"></i> </div>
                 <div class="contact-info">
-                    <h6>Phone</h6>
+                    <h1>Phone</h1>
                     <h2><a href="tel:+255757835930">+255 (0) 757 835 930</a></h2>
                     <h2><a href="tel:+255626499708">+255 (0) 626 499 708</a></h2>
                 </div>
@@ -189,7 +189,7 @@
             <div class="contact-item">
                 <div class="icon"> <i id="mailE" class="fa fa-envelope-open"></i> </div>
                 <div class="contact-info">
-                    <h6>Email</h6>
+                    <h1>Email</h1>
                     <h2><a href="mailto:jictoejeremiah@gmail.com">jictoejeremiah@gmail.com</a></h2>
                     <h2><a href="mailto:josephjeremiah458@gmail.com">josephjeremiah458@gmail.com</a></h2>
                 </div>
@@ -197,7 +197,7 @@
             <div class="contact-item">
                 <div class="icon"> <i class="fa fa-location-arrow"></i> </div>
                 <div class="contact-info">
-                    <h6>Address</h6>
+                    <h1>Address</h1>
                     <h2>Arusha, Tanzania</h2>
                     <h2>Sanawari</h2>
                 </div>
@@ -210,7 +210,7 @@
     <!-- Footer Section -->
     <section id="footer">
         <div class="footer container">
-            <div class="brand"><h6><span>J</span>eremiah <span>J</span>oseph</h6></div>
+            <div class="brand"><h1><span>J</span>eremiah <span>J</span>oseph</h1></div>
             <h2>Your Software Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
